# teo-waiter

./: CMakeLists.txt  README.md
cmake/template/: WAITERConfig.cmake.in
libraries/: CMakeLists.txt
libraries/ExampleLibrary/: CMakeLists.txt
programs/: CMakeLists.txt
programs/exampleProgram/: CMakeLists.txt
programs/waiterArmMov/: CMakeLists.txt  WaiterArmMov.cpp
programs/waiterDialogueManager/: CMakeLists.txt  StateMachine.cpp  StateMachine.hpp  WaiterDialogueManager.cpp  WaiterDialogueManager.hpp  main.cpp
programs/waiterExecHead/: CMakeLists.txt  InCvPort.cpp  InCvPort.hpp  InSrPort.cpp  InSrPort.hpp  WaiterExecHead.cpp  WaiterExecHead.hpp  main.cpp
programs/waiterExecManip/: CMakeLists.txt  InCvPort.cpp  WaiterExecManip.cpp  WaiterExecManip.hpp  main.cpp
programs/waiterExecutionCore/: CMakeLists.txt  InCvPort.cpp  WaiterExecutionCore.cpp  WaiterExecutionCore.hpp  main.cpp
programs/wtrArms/: CMakeLists.txt  WtrArms.cpp  WtrArms.hpp  main.cpp
programs/wtrDialogue/: CMakeLists.txt  StateMachine.cpp  StateMachine.hpp  WtrDialogue.cpp  WtrDialogue.hpp  main.cpp  wtrDialogue.cpp  wtrDialogue.hpp
programs/wtrHead/: CMakeLists.txt  InCvPort.cpp  InCvPort.hpp  InDiaPort.cpp  InDiaPort.hpp  InSrPort.hpp  WaiterExecHead.hpp  WtrHead.cpp  WtrHead.hpp  main.cpp
programs/wtrLeftArm/: CMakeLists.txt  InCvPort.cpp  InCvPort.hpp  InSrPort.cpp  InSrPort.hpp  WtrLeftArm.cpp  WtrLeftArm.hpp  main.cpp
programs/wtrRightArm/: CMakeLists.txt  InCvPort.cpp  (+6 more)
share/: CMakeLists.txt
share/app/waiter/scripts/: waiter.xml  waiter_english.xml  waiter_spanish.xml
(+1 files in other folders)
